--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
 	"files.associations": {
 		"stdio.h": "c",
 		"ft_printf.h": "c",
-		"libft.h": "c"
+		"libft.h": "c",
+		"stddef.h": "c",
+		"stdlib.h": "c"
 	}
 }
