--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,17 @@
 		"ft_printf.h": "c",
 		"libft.h": "c",
 		"stddef.h": "c",
-		"stdlib.h": "c"
+		"stdlib.h": "c",
+		"__hash_table": "c",
+		"__split_buffer": "c",
+		"array": "c",
+		"bitset": "c",
+		"initializer_list": "c",
+		"iterator": "c",
+		"string": "c",
+		"string_view": "c",
+		"unordered_map": "c",
+		"utility": "c",
+		"vector": "c"
 	}
 }
